--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "fcm-node": "^1.5.2",
-    "helmet": "^3.21.2"
+    "fs": "0.0.1-security",
+    "helmet": "^3.21.2",
+    "json-stringify-safe": "^5.0.1"
   }
 }
