--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fs": "0.0.1-security",
     "helmet": "^3.21.2",
     "json-stringify-safe": "^5.0.1",
+    "multer": "^1.4.2",
     "serve-index": "^1.9.1"
   }
 }
