--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "json-stringify-safe": "^5.0.1",
     "multer": "^1.4.2",
     "serve-index": "^1.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
