--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "serve-index": "^1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "@types/express": "^4.17.2",
+    "@types/node": "^13.5.2",
+    "nodemon": "^2.0.2",
+    "typescript": "^3.7.5"
   }
 }
